# automatic-waffle

./: README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
