[project]
name = "homeworkgit"
version = "0.1.0"
description = ""
authors = [
    {name = "Chernyshev Kirill",email = "offkirillchernyshev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.18.1"
black = "^25.1.0"
isort = "^6.0.1"

